--- a/excalidraw-app/index.html
+++ b/excalidraw-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Excalidraw | Hand-drawn look & feel • Collaborative • Secure</title>
+    <title>ifthinkytheninky • feeling thinky? • OK, get inky!</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover, shrink-to-fit=no"
@@ -14,26 +14,26 @@
     <!-- Primary Meta Tags -->
     <meta
       name="title"
-      content="Excalidraw — Collaborative whiteboarding made easy"
+      content="ifthinkytheninky — Creative whiteboarding with a twist"
     />
     <meta
       name="description"
-      content="Excalidraw is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+      content="ifthinkytheninky is a creative whiteboard tool with adult coloring features for stress relief, built on the amazing Excalidraw foundation."
     />
     <meta name="image" content="https://excalidraw.com/og-image-3.png" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:site_name" content="Excalidraw" />
+    <meta property="og:site_name" content="ifthinkytheninky" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://excalidraw.com" />
     <meta
       property="og:title"
-      content="Excalidraw — Collaborative whiteboarding made easy"
+      content="ifthinkytheninky — Creative whiteboarding with a twist"
     />
-    <meta property="og:image:alt" content="Excalidraw logo" />
+    <meta property="og:image:alt" content="ifthinkytheninky logo" />
     <meta
       property="og:description"
-      content="Excalidraw is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+      content="ifthinkytheninky is a creative whiteboard tool with adult coloring features for stress relief, built on the amazing Excalidraw foundation."
     />
     <meta property="og:image" content="https://excalidraw.com/og-image-3.png" />
 
@@ -43,11 +43,11 @@
     <meta property="twitter:url" content="https://excalidraw.com" />
     <meta
       property="twitter:title"
-      content="Excalidraw — Collaborative whiteboarding made easy"
+      content="ifthinkytheninky — Creative whiteboarding with a twist"
     />
     <meta
       property="twitter:description"
-      content="Excalidraw is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+      content="ifthinkytheninky is a creative whiteboard tool with adult coloring features for stress relief, built on the amazing Excalidraw foundation."
     />
     <meta
       property="twitter:image"
@@ -210,7 +210,7 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <header>
-      <h1 class="visually-hidden">Excalidraw</h1>
+      <h1 class="visually-hidden">ifthinkytheninky</h1>
     </header>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
